--- a/content/publication/edudiff/cite.bib
+++ b/content/publication/edudiff/cite.bib
@@ -1,5 +1,5 @@
 @article{yoo2014,
-  title = {Educational Differentials in Cohort Fertility during the Fertility Transition in {{South Korea}}},
+  title = {Educational Differentials in Cohort Fertility during the Fertility Transition in South Korea},
   author = {Yoo, Sam Hyun},
   year = {2014},
   journal = {Demographic Research},
