--- a/content/publication/edudiff/cite.bib
+++ b/content/publication/edudiff/cite.bib
@@ -1,4 +1,4 @@
-@article{yoo2014,
+@article{edudiff,
   title = {Educational Differentials in Cohort Fertility during the Fertility Transition in South Korea},
   author = {Yoo, Sam Hyun},
   year = {2014},
