--- a/content/publication/understanding/cite.bib
+++ b/content/publication/understanding/cite.bib
@@ -1,4 +1,4 @@
-@article{yoo2014a,
+@article{understanding,
   title = {Understanding the {{Complexity}} of {{Ambivalence Toward Pregnancy}}: {{Does It Predict Inconsistent Use}} of {{Contraception}}?},
   author = {Yoo, Sam Hyun and Guzzo, Karen Benjamin and Hayford, Sarah R.},
   year = {2014},
