--- a/content/publication/recent_fertility/cite.bib
+++ b/content/publication/recent_fertility/cite.bib
@@ -1,8 +1,11 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{yoo2022,
+  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
+  author = {Yoo, Sam Hyun},
+  year = {2022},
+  month = mar,
+  journal = {Asian Population Studies},
+  pages = {1--22},
+  publisher = {{Routledge}},
+  issn = {1744-1730},
+  doi = {10.1080/17441730.2022.2054090}
 }
