--- a/content/publication/yoo2016/cite.bib
+++ b/content/publication/yoo2016/cite.bib
@@ -1,11 +1,9 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
+@article{yoo2016,
+  title = {Postponement and Recuperation in Cohort Marriage: {{The}} Experience of {{South Korea}}},
   author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
-}
+  year = {2016},
+  journal = {Demographic Research},
+  volume = {35},
+  number = {35},
+  pages = {1045--1078},
+  abstract = {\textbf{Background}: Despite continuing marriage delay in East Asia, little is known about the shift of marriage towards later ages and the concomitant decline in marriage. \textbf{Objective}: Applying the concept of cohort postponement and recuperation to marriage in South Korea, I study the pattern of marriage delay among women and the extent to which delayed marriages are realized later in life. \textbf{Methods}: With Korean census 1\% samples microdata, I compare women's marriage schedules across five-year birth cohorts born between 1916 and 1985 and analyze the trend in marriage delay and subsequent recovery at higher ages. \textbf{Results}: Two distinct patterns of marriage delay can be identified. The first one occurred among the birth cohorts born in the 1930s and early 1940s, who faced successive political upheavals such as World War II and the Korean War. A different pattern of marriage delay is underway among the women born since the 1970s, among whom the proportion of the never-married by age 45 has begun to increase. These two patterns changed with level of education: The wars delayed marriage in a similar way for all social groups, whereas the recent marriage delay is more pronounced among women with tertiary education. \textbf{Conclusions}: The extent to which marriage delay is compensated at later ages differed across cohorts and social groups. Given the recent trend, the proportion of ever-married women by age 45 is expected to decline considerably among the younger cohorts born since the late 1970s, bringing an end to the universal marriage pattern in South Korea. \textbf{Contribution}: This study highlights the transition of marriage timing in South Korea, which experienced rapid socioeconomic changes, which differs significantly from the European experience.}
