--- a/content/publication/yoo2022_ferproj/cite.bib
+++ b/content/publication/yoo2022_ferproj/cite.bib
@@ -1,11 +1,14 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
+@article{yusamhyeon2022,
+  title = {출산의 지연변천 분석과 완결출산율 추계},
+  author = {{유삼현}},
   year = {2022},
   month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
+  journal = {통계연구},
+  volume = {27},
+  number = {1},
+  pages = {29--55},
+  publisher = {{통계청}},
+  issn = {12268275},
+  abstract = {출산의 지연변천(postponement transition of fertility)은 저출산 사회의 출산율 변동을 출산연령의 증가와 출산수준의 복잡한 상호작용으로 설명하는 인구학적 개념이다. 이 연구는 출산의 지연변천을 한국 사회에 적용하여 코호트 관점에서 분석하고, 그 결과를 토대로 코호트 완결출산율을 전망한다. 1981{$\sim$}2020년 출생신고자료와 추계인구를 사용하여 준거모형과 관계모형 등 세부 분석방법을 적용하였다. 연구결과, 한국 사회에서 1969년 출생코호트 이후 출산의 지연변천이 진행되어 왔음을 확인하였다. 1969년 출생코호트 대비 후행 출생코호트에서 20대의 출산율 감소가 지속되는 반면, 30대 이후 출산율 반등은 상대적으로 제한적인 수준에 머무르고 있었다. 출산지연과 회복의 전개과정이 현 수준으로 유지될 경우 1980년대에 출생한 코호트에서도 완결출산율 하락이 지속될 것으로 전망된다. 이 연구는 출산의 지연과 회복 과정을 실증적으로 분석하고, 출산율 변동에 관해 코호트 논의에 기여한 의의가 있다.},
+  keywords = {완결출산율,지연변천,출산율추계,코호트출산력,템포효과}
 }
