--- a/content/publication/yooagadjanian2021/cite.bib
+++ b/content/publication/yooagadjanian2021/cite.bib
@@ -1,11 +1,11 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
+@article{yoo2021,
+  title = {The Paradox of Change: {{Religion}} and Fertility Decline in {{South Korea}}},
+  author = {Yoo, Sam Hyun and Agadjanian, Victor},
+  year = {2021},
+  journal = {Demographic Research},
+  volume = {44},
+  number = {23},
+  pages = {537--562},
+  issn = {1435-9871},
+  abstract = {\textbf{Background}: The scholarship on the association of religion and fertility has paid relatively little attention to East Asia, a region that has experienced rapid fertility declines. South Korea is an important setting to study this association as its fertility decreased dramatically and its population includes sizable shares of Buddhists, Catholics, and Protestants, as well as a large nonreligious segment. \textbf{Objective}: We analyze patterns of religious differentials in fertility and their changes between the era of near-replacement fertility and that of lowest-low fertility by relating these changing patterns to massive and rapid socioeconomic and cultural shifts in South Korean society. \textbf{Methods}: Using the pooled data from the 1985, 2005, and 2015 census samples, which cover the period of falling fertility first to near replacement and then to far below replacement levels, we fit zero-inflated Poisson models to test for differences in the number of children ever born between women with a religious affiliation and those without one as well as across religious affiliations. \textbf{Results}: The findings shed light on the dynamic nature of the association between religious affiliation and reproduction in contexts of rapid and radical societal transformation by illustrating how evolving cultural meanings of religion may impact fertility outcomes. \textbf{Contribution}: The Korean experience advances our understanding of the dynamic relationship between religion and fertility in the transition from high to low birth rates.}
 }
