--- a/content/publication/yooetal2014/cite.bib
+++ b/content/publication/yooetal2014/cite.bib
@@ -1,11 +1,12 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
+@article{yoo2014a,
+  title = {Understanding the {{Complexity}} of {{Ambivalence Toward Pregnancy}}: {{Does It Predict Inconsistent Use}} of {{Contraception}}?},
+  author = {Yoo, Sam Hyun and Guzzo, Karen Benjamin and Hayford, Sarah R.},
+  year = {2014},
+  month = jan,
+  journal = {Biodemography and Social Biology},
+  volume = {60},
+  number = {1},
+  pages = {49--66},
+  issn = {1948-5565},
+  doi = {10.1080/19485565.2014.905193}
 }
