--- a/content/publication/yooetal2016/cite.bib
+++ b/content/publication/yooetal2016/cite.bib
@@ -1,11 +1,9 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
-}
+@article{Yoo2016,
+  title = {Old {{Habits Die Hard}}? {{Lingering Son Preference}} in an {{Era}} of {{Normalizing Sex Ratios}} at {{Birth}} in {{South Korea}}},
+  author = {Yoo, Sam Hyun and Hayford, Sarah R. and Agadjanian, Victor},
+  year = {2016},
+  journal = {Population Research and Policy Review},
+  pages = {1--30},
+  issn = {1573-7829},
+  doi = {10.1007/s11113-016-9405-1},
+  abstract = {South Korea was among the first countries to report both an abnormally high sex ratio at birth (SRB) and its subsequent normalization. We examine the role of son preference in driving fertility intentions during a period of declining SRB and consider the contribution of individual characteristics and broader social context to explaining changes in intentions. We employ data from the National Survey on Fertility, Family Health and Welfare that span 1991\textendash 2012. We find that reported son preference declined to a great extent but remained substantial by the end of the observation period, and that the intention to have a third child still differed by sex of existing children. Change in individual-level factors does not explain the decline in son preference, suggesting that broad social changes were also important. This study provides a better understanding of how son preference evolves in the post-transitional context of very low fertility.}
