--- a/content/publication/yooryu2019/cite.bib
+++ b/content/publication/yooryu2019/cite.bib
@@ -1,11 +1,14 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
+@article{yusamhyeon2019,
+  title = {국제결혼 부부의 이혼분석},
+  author = {{유삼현} and {유정균}},
+  year = {2019},
+  month = jun,
+  journal = {한국인구학},
+  volume = {42},
+  number = {2},
+  pages = {25--50},
+  publisher = {{한국인구학회}},
+  issn = {12262986},
+  abstract = {국제결혼 부부의 결혼안정성은 외국인 배우자의 적응과 사회적 통합이라는 측면에서 중요한의미를 갖는다. 이 논문은 우리 사회에서 한국인과 외국인의 결합으로 구성된 국제결혼 부부의결혼안정성이 한국인끼리 결합된 한국인 부부와 구별되는지를 확인하고 그 인과관계를 좀 더이해하기 위한 것이다. 2010\textasciitilde 2016년 혼인과 이혼 동태통계 원자료를 활용하여 2010년 결혼코호트를 대상으로 이혼까지 걸린 시간을 이산시간위험모형(discrete-time hazard model)을 통해 분석하였다. 분석결과 남편 또는 아내의 출생국적이 한국이 아닌 외국일 경우 각각 양측 모두 한국인인 부부에 비해 이혼위험이 높은 것으로 나타났다. 남편 보다는 아내가 외국인일 경우 이혼위험이 상대적으로 더 높았으며, 남편과 아내의 교육수준과 혼인연령을 고려할 경우 두 집단의이혼위험 차이가 크게 감소하였다. 특히 외국인 남편과 아내의 출신 국적별로 세분화하였을 때, 남편의 출생국적이 미국, 아내의 출생국적인 베트남이나 캄보디아인 경우 한국인 남편과 아내보다 오히려 더 낮은 이혼위험을 갖는 것으로 나타났다. 논문의 결과는 국제결혼이 당연히 높은이혼위험과 연관되는 것은 아니며 출신국적과 혼인연령, 교육수준 등 다양한 요인을 함께 고려해야 함을 재확인시켜주고 있다.},
+  keywords = {국제결혼,다문화,동태통계,사건사분석,이혼}
 }
