--- a/content/publication/yoosobotka2018/cite.bib
+++ b/content/publication/yoosobotka2018/cite.bib
@@ -1,11 +1,9 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
-}
+@article{yoo2018,
+  title = {Ultra-Low Fertility in {{South Korea}}: {{The}} Role of the Tempo Effect},
+  author = {Yoo, Sam Hyun and Sobotka, Tom{\'a}{\v s}},
+  year = {2018},
+  journal = {Demographic Research},
+  volume = {38},
+  number = {22},
+  pages = {549--576},
+  abstract = {\textbf{Background}: The total fertility rate (TFR) in South Korea has fallen below 1.3 since 2001. The role of the rapid shift toward a late-childbearing pattern in driving Korean fertility decline to this ultra-low level has been little explored until now. \textbf{Objective}: We provide an in-depth analysis of period fertility trends by birth order in South Korea from 1981 to 2015, when the period TFR fell from 2.57 to extremely low levels. \textbf{Methods}: We combine census and birth registration data to estimate period and cohort fertility indicators by birth order. We compare changes in conventional TFR with tempo- and parity-adjusted total fertility rate (TFRp*) and their birth-order-specific components. \textbf{Results}: The tempo effect linked to the shift toward delayed childbearing has had a strong and persistent negative influence on period TFRs in South Korea since the early 1980s. Without the shift to later childbearing, period fertility rates in South Korea would consistently stay higher and decline more gradually, reaching a threshold of very low fertility, 1.5, only in 2014. The postponement of childbearing and the resulting tempo effect were strongest in the early 2000s, when Korean TFR reached the lowest levels. More recently, Korean fertility has been characterized by a diminishing tempo effect and falling first and second birth rates. This trend marks a break with the previous pattern of almost universal fertility and a strong two-child family model. \textbf{Contribution}: Our study demonstrates the importance of the tempo effect in explaining the shift to ultra-low fertility in South Korea and in East Asia.}
