--- a/content/publication/agadjanianyoo2018/cite.bib
+++ b/content/publication/agadjanianyoo2018/cite.bib
@@ -1,11 +1,11 @@
-@article{yoo2022,
-  title = {Total Number of Births Shrinking Faster than Fertility Rates: Fertility Quantum Decline and Shrinking Generation Size in {{South Korea}}},
-  author = {Yoo, Sam Hyun},
-  year = {2022},
-  month = mar,
-  journal = {Asian Population Studies},
-  pages = {1--22},
-  publisher = {{Routledge}},
-  issn = {1744-1730},
-  doi = {10.1080/17441730.2022.2054090}
+@article{agadjanian2018,
+  title = {Migration, Legality, and Fertility Regulation},
+  author = {Agadjanian, Victor and Yoo, Sam Hyun},
+  year = {2018},
+  journal = {Demographic Research},
+  volume = {38},
+  pages = {1277--1302},
+  publisher = {{Max-Planck-Gesellschaft zur Foerderung der Wissenschaften}},
+  issn = {14359871, 23637064},
+  abstract = {[BACKGROUND Migrant-vs.-native differentials in reproductive behavior are typically examined through the prism of socioeconomic and cultural constraints that characterize the migration process and experiences. However, the literature seldom factors in migrant legal status because necessary data is rarely available. OBJECTIVE The study seeks to fill this important gap by looking at variations in induced abortion and contraceptive use not only between migrants and nonmigrants but also among migrants of different legal statuses in the Russian Federation. METHODS We use unique survey data collected in urban Russia from Central Asian working migrant women of different legal statuses \textendash{} regularized vs. irregular \textendash{} as well as their native counterparts. Binomial and multinomial logistic regressions are fitted to model abortion experience and current contraceptive use and method choice. RESULTS The results point to higher overall use of abortion among natives, but also to significant differences between migrants with regularized and irregular legal statuses. With respect to contraception, while no variation in overall use between migrants and natives or between migrants of different legal statuses is detected, instructive migrant-vs.-native differences in method choice emerge. CONCLUSIONS The findings underscore the importance of migrants' legal status, along with their other characteristics, for a better understanding of their reproductive behavior and for more effective corresponding policies. CONTRIBUTION The study offers pioneering insights into the intersection of migration, legality, and fertility in contemporary Russia and contributes to the cross-national scholarship on migration and reproductive behavior and health.]}
 }
